--- a/index.html
+++ b/index.html
@@ -45,9 +45,33 @@
                         <a href="#" class="button-more">Leer más</a>
                     </article>
             </div>
-            <sidebar id="sidebar">
-
-            </sidebar>
+            <aside id="sidebar">
+                <div id="about">
+                    <h4><span>¿Quien soy?</span></h4>
+                    <img src="img/eriezly.jpg" alt="icono de erizly">
+                    <ul>
+                        <li><a href="https://www.instagram.com/eriezly/" target="_blank">My Instagram</a></li>
+                        <li>🍄 Lvl 22 🇲🇽.</li>
+                        <li>🍄 Hobbyist artist.</li>
+                        <li>🍄 Paint Tool SAI 2.</li>
+                        <li>🍄 My style changes a lot.</li>
+                        <li>🍄 Commissions: open [DM me].</li>
+                    </ul>
+                   
+                </div>
+                <div id="login">
+                    <h4><span>Identificate</span></h4>
+                    <form>
+                        <label for="name">Nombre</label>
+                        <input type="text" name="name"/>
+                        <label for="email">Correo</label>
+                        <input type="text" name="email"/>
+                        <label for="password">Password</label>
+                        <input type="password" name="password"/>
+                        <input type="submit" value="Entrar"/>
+                    </form>
+                </div>
+            </aside>
             <div class="clearfix"></div>
 
         </section>
