--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     </section>
     <footer>
-        Primer proyecto curso de JavaScript.
+        Visitame en: www.instagram.com/eriezly/ <a href="https://www.instagram.com/eriezly/">clic</a>
     </footer>
 </body>
 </html>
