temas y scroll hacia arriba

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Estilos CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link id="theme" rel="stylesheet" type="text/css" href="css/orange.css">
 
     <!-- jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -29,6 +30,12 @@
 </head>
 
 <body>
+    <div id="selector-theme">
+        <div id="to-blue"></div>
+        <div id="to-brown"></div>
+        <div id="to-orange"></div>
+        
+    </div>
     <section id="global">
         <!-- Cabecera-->
         <header>
@@ -94,6 +101,7 @@
     </section>
     <footer>
         Visitame en: www.instagram.com/eriezly/ <a href="https://www.instagram.com/eriezly/">clic</a>
+        <a href="#" class="subir">Ir arriba</a>
     </footer>
 </body>
 
