--- a/index.html
+++ b/index.html
@@ -79,13 +79,15 @@
                         <li>🍄 My style changes a lot.</li>
                         <li>🍄 Commissions: open [DM me].</li>
                     </ul>
+                    <p id="bienvenido"></p>
+                    <p id="plogout"></p>
 
                 </div>
                 <div id="login">
                     <h4><span>Identificate</span></h4>
                     <form>
                         <label for="name">Nombre</label>
-                        <input type="text" name="name" />
+                        <input type="text" name="name" id="form_name" />
                         <label for="email">Correo</label>
                         <input type="text" name="email" />
                         <label for="password">Password</label>
@@ -100,7 +102,7 @@
 
     </section>
     <footer>
-        Visitame en: www.instagram.com/eriezly/ <a href="https://www.instagram.com/eriezly/">clic</a>
+        Visitame en: www.instagram.com/eriezly/ <a href="https://www.instagram.com/eriezly/" target="_blank">clic</a>
         <a href="#" class="subir">Ir arriba</a>
     </footer>
 </body>
