--- a/reloj.html
+++ b/reloj.html
@@ -10,19 +10,18 @@
     <!-- Estilos CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link id="theme" rel="stylesheet" type="text/css" href="css/orange.css">
-
-    <!-- jQuery-->
-        <!-- jQuery-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="js/jquery-ui-1.12.1/jquery-ui.min.css">
-        <link rel="stylesheet" href="js/jquery-ui-1.12.1/jquery-ui.structure.min.css">
-        <link rel="stylesheet" href="js/jquery-ui-1.12.1/jquery-ui.theme.min.css">
-        <script type="text/javascript" src="js/jquery-ui-1.12.1/jquery-ui.min.js"></script>
- 
    
-    <!-- Mis scripts-->
+    <!-- jQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+     <!-- momentjs-->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/es.js"></script>
+
+     <!-- Mis scripts-->
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/about.js"></script>
+    <script type="text/javascript" src="js/reloj.js"></script>
+
 
 </head>
 
@@ -54,16 +53,12 @@
         <!-- Contenido-->
         <section id="content">
             <div id="box">
-               <!-- Cargar acordeon-->
-               <h2>Sobre mi</h2>
-               <div id="acordeon">
-                <h3>¿Quien soy?</h3>
-                <div>Soy Erik González, tengo 22 años, soy de Empalme, Son. y mi pasatiempo es dibujar en digital.</div>
-                <h3>¿por que eriezly?</h3>
-                <div>El nombre eriezly surgío de erik "eri" y gonzález "ez" y "ly" para terminar formando un nick algo mas único, ya que no quería un nombre que ya estuviera siendo usado.</div>
-                <h3>Actividad</h3>
-                <div>Subo dibujos regularmente cada 2 días o 3, por lo regular entre las 9am y 12pm ya que es la hora con mas actividad de mis seguidores.</div>
+               <!-- Cargar reloj-->
+               <div id="reloj">
+
+
                </div>
+               
             </div>
             <aside id="sidebar">
                 <div id="about">
